Fix button styles to work around the webkit button style on IOS. #MBL-10693

--- a/content/css/themes/crm/forms.less
+++ b/content/css/themes/crm/forms.less
@@ -39,6 +39,7 @@ input:focus, textarea:focus {
 .toolbar > .button {
     background-color: @toolbar-button-bg-color;
     outline: none;
+    border: none;
 }
 
 .panel-content > h2 > button {
@@ -404,6 +405,9 @@ button.clear-button:focus {
     height: 36px;
     line-height: 30px;
     padding: 0 2px 0 2px;
+    outline: none;
+    border: @button-border;
+    .border-radius(@button-border-radius);
 }
 
 .toolButton {
