--- a/content/css/themes/crm/variables.less
+++ b/content/css/themes/crm/variables.less
@@ -114,8 +114,8 @@
 @button-text-color: #fff;
 @button-bg-color: @color-deep-azure;
 @button-active-bg-color: #fff;
-@button-border: none;
-@button-border-radius: 0px;
+@button-border: 1px solid @color-fields-border;
+@button-border-radius: 3px;
 @button-font-size: @font-size-paragraph;
 @button-font-weight: bold;
 @button-text-align: center;
